--- a/assets/sass/_partials/_actionplan.scss
+++ b/assets/sass/_partials/_actionplan.scss
@@ -126,7 +126,7 @@
             position: relative;
             padding-top: 50px;
 
-            .fa.fa-chevron-down{
+            .fa.fa-chevron-down, .fa.fa-chevron-up{
                 font-size: 50px;
             }
             .odd{
@@ -348,5 +348,126 @@
             &.icon-truck:active:before{
                 color: $lblue !important;
             }
+        }
+         .only_print{
+            display:none;
+         }
+         .page-break    { display: none; }
+         #to_top{
+            background: $dblue;
+            color:$cream;
+            position:fixed;
+            padding: 20px;
+            bottom:0;
+            right: 20px;
+            @include transition(1, 1s, 0);
+            i{
+                color:$cream;
+                 @include transition(1, 1s, 0);
+            }
+            &:hover{
+                i{
+                    color:$burg;
+                }
+            }
+
+         }
+        @media print {
+            body{
+                background:$w;
+                color:$b;
+            }
+            img{
+                width:100px;
+            }
+
+
+            #info{
+                display:block !important;
+                position:relative;
+                .modal-content{
+                    box-shadow: none !important;
+                    width:100%;
+                    height:100%;
+                    margin:auto;
+                       border:none !important;
+                       //page-break-before: always;
+                }
+                .modal-dialog{
+                   .only_print{
+                        display:block;
+                        text-align: center;
+                        padding:20px;
+                        padding-bottom:0;
+                   }
+                    width:600px;
+                    height:100%;
+                    //page-break-before: always;
+                    margin:auto;
+                    box-shadow: none !important;
+                    border:none !important;
+                    h1{
+                        font-size:18px;
+                        .line{
+                            display:none;
+                        }
+                    }
+                    h3{
+                        padding:0;
+                        margin:0;
+                        font-size: 14px;
+                    }
+                    ul{
+                        li{
+                            padding:0px;
+                            font-size: 12px !important;
+                             margin-bottom: 20px;
+                            &:nth-child(odd){
+                                background: #eeeeee;
+                            }
+                            &:after{
+                                margin-top:20px;
+                                width: 10%;
+                                border-width: 2px;
+                                border-top-style: solid;
+                                content: "";
+                                display: block;
+                                height: 10px;
+                                line-height: 1em;
+                                margin: -13px auto auto;
+                                padding-top: 20px;
+                                top: 20px;
+                                position: relative;
+                            }
+                        }
+                    }
+                    article{
+                        padding-top:0px;
+                        padding-bottom:0px;
+                        font-size: 12px !important;
+                       // page-break-after: always;
+                       // page-break-inside: auto;
+                       // page-break-before: auto;
+
+                        p{
+                            margin:0 0 5px;
+                            line-height:15px;
+                        }
+                    }
+                }
+                .modal-header, .modal-footer{
+                    display:none;
+                }
+            }
+           #sb-site, .sb-slide, #to_top  {
+                display:none;
+            }
+            @page :left {
+margin: 0.5cm;
+}
+
+@page :right {
+margin: 0.8cm;
+}
         }
 
