--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -18,6 +18,14 @@ body{
     background-size: 100% auto;
     color: $burg;
     font-family: $freight;
+    font-size:17px;
+}
+sup{
+    top:-13px;
+}
+::selection{
+    background:$lblue;
+    color:$cream;
 }
 #sb-site{
     background-color: $cream !important;
@@ -29,12 +37,65 @@ a{
     font-weight: 600;
     @include transition(1, 1s, 0);
     &:hover{
-        color:$burg;
+        color:$lblue;
+        text-decoration:none;
+    }
+    &.next{
+        &:after{
+            content:"\f178";
+            font-family: FontAwesome;
+            color:$lblue;
+            padding-left: 10px;
+        }
+        &:hover{
+              text-decoration: none;
+        }
     }
 }
 h1{
     font-weight: 600;
     text-transform: uppercase;
+}
+h2{
+    font-size: 35px;
+    &.titles{
+        padding-bottom: 0;
+        margin-bottom:0;
+        height:35px;
+        &:after{
+
+            border-width: 2px;
+            border-top-style: solid;
+            border-top-color: $lblue;
+            content: "";
+            display: block;
+            height: 0px;
+            line-height: 1em;
+            padding-top: 20px;
+            top: -16px;
+            margin-left: 55px;
+            position: relative;
+
+        }
+        &.smallc{
+             &:after{
+                width:10%;
+                left: 80%;
+             }
+        }
+        &.med{
+             &:after{
+                 width: 40%;
+                   left: 50%;
+             }
+        }
+        &.large{
+             &:after{
+                width:75%;
+                left:20%;
+             }
+        }
+    }
 }
 .q{
     font-weight: 800;
@@ -78,15 +139,16 @@ h1{
             &.on{
                 background: $burg;
                 padding:20px;
-                margin-left:-16px;
-                margin-right:-16px;
+                margin-left:-15px;
+                margin-right:-15px;
                 margin-bottom: -1px;
             }
             &.off{
                 background: $orange;
                 padding:10px;
                 display:none;
-                padding-bottom: 9px;
+                padding-bottom: 12px;
+                padding-top: 12px;
             }
             a{
                 text-align: right;
@@ -150,7 +212,7 @@ h1{
                     i{
                         float: right;
                         font-size: 39px;
-                        top: -16px;
+                        top: -46px;
                         position: relative;
                         right: -30px;
                     }
@@ -175,6 +237,7 @@ h1{
                  list-style: none;
                  padding-top: 0;
                  margin-top: -10px;
+                 padding-left: 15px;
             }
         }
 
@@ -183,7 +246,7 @@ h1{
             margin-top: 20px;
             margin-bottom:0;
             padding-left: 37px;
-
+            padding-right:10px;
             .top_drop{
                  &.current-menu-parent {
                     list-style-image: url("assets/img/side_nav_arrow_active.png");
@@ -231,6 +294,7 @@ h1{
     }
     .frontpage_image{
         margin-left:5px;
+
     }
     &.page{
 
@@ -238,7 +302,131 @@ h1{
         .page_content{
             background:none;
             margin-top: 50px;
-            padding-bottom: 50px;
+            padding-bottom: 250px;
+            .ac{
+                margin-left: -25px;
+            }
+
+            .nav-tabs{
+                background: $dcream;
+                padding-top:20px;
+                display: table;
+            }
+            .tab-pane{
+            padding:20px;
+                }
+            }
+
+
+
+            .nav-tabs > li{
+                height: 200px;
+
+                display:table-cell;
+                a{
+                    //height:100%;
+                    display:block;
+                    //height:200px;
+                    padding:20px;
+                    border-top:thick solid $dblue;
+                    border-bottom:thick solid $dblue;
+                    font-size: 16px;
+                    text-transform: uppercase;
+                    line-height: 19px;
+                      display:table-cell;
+                      vertical-align: middle;
+                      background:$dcream ;
+
+                    &:hover, &:active, &:focus, &:visited{
+                        background:$cream !important;
+                    }
+
+                    i{
+                        font-size:40px;
+                        position: relative;
+                        //top:50%;
+                        margin-top:30px;
+                    }
+                    &.showme{
+                        background: $cream !important;
+                        border-top:none;
+                        border-bottom:none;
+                       height:100%;
+
+                    }
+                }
+            }
+            .nav-tabs{
+                background: $dcream;
+                padding-top:20px;
+                display: table;
+            }
+            .tab-pane{
+            padding:20px;
+            }
+            .checklist{
+                .tab-pane{
+                    ul{ list-style: none;
+                        li{
+                            display: block;
+                            padding-left: 1.2em;
+                            &:before{
+                                content:"\f0da";
+                                font-family: FontAwesome;
+                                font-size: 20px;
+                                display: inline-block;
+                                width: 1.2em;
+                                margin-left: -1.2em;
+                                position: relative;
+
+                            }
+                        }
+                    }
+                }
+                .ac{
+                    width:852px;
+                    //this will need to change for mobile rendering
+                }
+                .nav-tabs > li{
+                height: 125px;
+                padding-bottom: 10px;
+                display:table-cell;
+                a{
+                    height:100%;
+                    display:block;
+                    //height:200px;
+                    padding:20px;
+                    padding-left:0;
+                    padding-right:0;
+                    border-top:thick solid $dblue;
+                    border-bottom:thick solid $dblue;
+                    font-size: 16px;
+                    text-transform: uppercase;
+                    line-height: 19px;
+                      display:table-cell;
+                      vertical-align: middle;
+                      background:$dcream ;
+
+                    &:hover, &:active, &:focus, &:visited{
+                        background:$cream !important;
+                    }
+
+                    i{
+                        font-size:30px;
+                        position: relative;
+                        //top:50%;
+                        margin-top:20px;
+                    }
+                    &.showme{
+                        background: $cream !important;
+                        border-top:none;
+                        border-bottom:none;
+                       height:100%;
+                        height:126px;
+                    }
+                }
+
+            }
         }
         h1{
             font-weight: 800;
@@ -259,8 +447,13 @@ h1{
         .frontpage_image{
             z-index: 1;
             img{
-                width:100%
+                width:100%;
             }
+        }
+        .sidenav{
+            //margin-top:-713px;
+            //margin-left: -210px;
+
         }
         @media only screen and (max-width : 400px) {
             .row{
@@ -277,7 +470,7 @@ h1{
 
         .page_content{
             //margin-top:400px;
-            margin-top: -236px;
+            margin-top: -265px;
             background:rgba(230, 228, 214, 0.8);
             padding:20px;
             z-index: 2;
@@ -476,8 +669,117 @@ h1{
         }
     }
 }
-@import "_partials/mobile";
+#sidebar{
+    margin-top:158px;
+}
 
+.accshort{
+    .btn{
+        white-space: normal !important;
+    }
+    .btn-primary{
+        background: none;
+        border:none;
+        color:$burg;
+        font-size: 22px;
+        font-weight: 600;
+        i{
+            font-size: 35px;
+            font-weight: 800;
+            color:$dblue;
+        }
+    }
+    .well{
+        background: $burg;
+        color:$cream;
+    }
+}
+
+.callout{
+    text-align: center;
+    background: $dblue;
+    border:thin solid $burg;
+    color:$cream;
+    padding:10px;
+    display: block;
+    margin-bottom:20px;
+    @include border-radius(5px);
+    @include transition(1, 1s, 0);
+    h1{
+        padding:0;
+        margin:0;
+        margin-bottom:10px;
+        font-size: 25px;
+    }
+    small{
+
+    }
+    &:hover{
+        text-decoration: none;
+        background: $cream;
+        color:$dblue;
+    }
+}
+.error{
+    margin:auto;
+    text-align:center;
+    @include border-radius(5px);
+    margin-top:50px;
+    &.page_content{
+         text-align:center;
+    }
+}
+
+.source{
+    color: $orange;
+    text-decoration: none;
+    cursor: help; //pointer
+    &:hover{
+        color:$lblue;
+    }
+
+}
+.popover-content{
+    word-wrap:break-word;
+}
+
+.st_sharethis{
+    .stButton{
+        .sharethis{
+            background-image: none;
+        }
+        .chicklets{
+              color: #00878d;
+  font-weight: 600;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+            font-size: 14px;
+            padding-left:0;
+            &:after{
+                content:"\f064";
+                font-family: FontAwesome;
+
+            }
+
+        }
+    }
+
+}
+.grades{
+    ul.nav-tabs li{
+        text-align: center;
+        i{
+            text-align: center;
+            margin:auto !important;
+        }
+    }
+}
+
+@import "_partials/mobile";
+@import "_partials/print-monitor";
 @import "_partials/actionplan";
 @import "_partials/fbstyle";
 @import "_partials/tabstyle";
