--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -223,6 +223,10 @@ h2{
     }
 }
 
+
+
+
+
 #content{
     z-index: 1;
     height:100%;
@@ -303,6 +307,109 @@ h2{
             background:none;
             margin-top: 50px;
             padding-bottom: 250px;
+            @media only screen and (max-width : 1100px) {
+                           padding-bottom: 20px;
+                           margin-top: 0px;
+                        }
+            .alert{
+        background:$orange url("assets/img/help_arrow.png") no-repeat center top;
+        width:100%;
+
+        padding-bottom:0;
+        padding-top: 0px;
+        color:$cream;
+        @include border-radius(0);
+
+        footer{
+             @include transition(1, 1s, 0);
+            &.on{
+                background: $burg;
+                padding:20px;
+                margin-left:-15px;
+                margin-right:-15px;
+                margin-bottom: -1px;
+            }
+            &.off{
+                background: $orange;
+                padding:10px;
+                display:none;
+                padding-bottom: 12px;
+                padding-top: 12px;
+            }
+            a{
+                text-align: right;
+                color:$cream;
+                text-transform: uppercase;
+                &:hover{
+                    color:$lburg;
+                }
+            }
+        }
+        a.close{
+                color:$cream;
+                display:block;
+                width:100%;
+                float:none;
+                line-height: auto;
+                text-shadow:none;
+                opacity:1.0;
+                &.off{
+                    font-size: 18px;
+                    font-weight:800;
+                    text-align: left;
+                     i{
+                        float: right;
+                        font-size: 17px;
+
+                        position: relative;
+
+                    }
+                }
+                &.on{
+                   font-size:20px;
+                    font-weight: 400;
+                }
+            }
+        h1{
+            color:$burg;
+            text-transform: uppercase;
+            font-size: 28px;
+            line-height: 22px;
+            letter-spacing: -1px;
+            font-weight:800;
+        }
+        ul{
+            left:0;
+            li{
+                display: block;
+                 padding:10px;
+                 padding-top: 15px;
+                 border-bottom: 2px solid $lorange;
+                 &:last-child{
+                    border-bottom:none;
+                 }
+                a{
+                    color:$cream;
+                    text-transform: uppercase;
+                    display: block;
+                    &:hover{
+                        text-decoration: none;
+                        color:$burg;
+                    }
+                    i{
+                        float: right;
+                        font-size: 39px;
+                        top: -5px;
+                        position: relative;
+                        @media only screen and (max-width : 500px) {
+                            top: -18px;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
             .ac{
                 margin-left: -25px;
             }
@@ -316,26 +423,37 @@ h2{
             padding:20px;
                 }
             }
-
-
-
             .nav-tabs > li{
                 height: 200px;
-
-                display:table-cell;
+                 @media only screen and (max-width : 1000px) {
+                           height:auto;
+                           padding-top:10px;
+                           padding-bottom:10px;
+                        }
+                //display:table-cell;
                 a{
                     //height:100%;
                     display:block;
-                    //height:200px;
+                    height:200px;
                     padding:20px;
+                      border:none;
                     border-top:thick solid $dblue;
                     border-bottom:thick solid $dblue;
                     font-size: 16px;
                     text-transform: uppercase;
                     line-height: 19px;
-                      display:table-cell;
+                      //display:table-cell;
                       vertical-align: middle;
                       background:$dcream ;
+                        @media only screen and (max-width : 800px) {
+                           height:100%;
+                           padding-top:10px;
+                           padding-bottom:10px;
+                           text-align: center;
+                           margin:auto;
+                        }
+                        @include border-radius(0px);
+
 
                     &:hover, &:active, &:focus, &:visited{
                         background:$cream !important;
@@ -359,7 +477,8 @@ h2{
             .nav-tabs{
                 background: $dcream;
                 padding-top:20px;
-                display: table;
+                //display: table;
+                margin:auto;
             }
             .tab-pane{
             padding:20px;
@@ -385,12 +504,18 @@ h2{
                 }
                 .ac{
                     width:852px;
+                    @media only screen and (max-width : 1000px) {
+                           width:auto;
+
+                        }
+
                     //this will need to change for mobile rendering
                 }
                 .nav-tabs > li{
-                height: 125px;
+                height: 140px;
                 padding-bottom: 10px;
-                display:table-cell;
+               // display:table-cell;
+
                 a{
                     height:100%;
                     display:block;
@@ -403,7 +528,7 @@ h2{
                     font-size: 16px;
                     text-transform: uppercase;
                     line-height: 19px;
-                      display:table-cell;
+                     // display:table-cell;
                       vertical-align: middle;
                       background:$dcream ;
 
@@ -434,10 +559,23 @@ h2{
         }
         .breadcrumbs{
             color:$lburg;
+            background:$burg;
+
             margin-top: 15px;
             font-weight: 600;
+            @media only screen and (max-width : 500px) {
+                font-size: 12px;
+            }
+            @media only screen and (max-width : 1000px) {
+              padding-bottom: 10px;
+            padding-top: 10px;
+            background:$burg;
+            }
             a{
                 color:$cream;
+                @media only screen and (max-width : 500px) {
+                    font-size: 12px;
+                }
             }
         }
     }
@@ -476,8 +614,8 @@ h2{
             z-index: 2;
             position: relative;
              /* Smartphones (portrait) ----------- */
-            @media only screen and (max-width : 320px) {
-              //margin-top: 100px;
+            @media only screen and (max-width : 680px) {
+              margin-top: 0px;
             }
             @media only screen and (min-width: 321px) and (max-width : 568px) {
               //margin-top: 200px;
@@ -512,6 +650,7 @@ h2{
                 background: $cream;
                 &.row{
                     margin-left: -15px;
+                    height:auto;
                 }
                 .slide{
                     height:550px;
@@ -613,6 +752,10 @@ h2{
                         }
                         .arrow{
                             display:block;
+                            @media only screen and (max-width : 800px) {
+                                display:none;
+                            }
+
                         }
                     }
                     footer{
@@ -627,11 +770,12 @@ h2{
                     .arrow{
                         display:none;
                         position: absolute;
-                            color: $burg;
-                            font-size: 90px;
-                            top: -76px;
-                            left: 38%;
-                            text-shadow: 0px 3px 0px $cream;
+                        color: $burg;
+                        font-size: 90px;
+                        top: -76px;
+                        left: 38%;
+                        text-shadow: 0px 3px 0px $cream;
+
                     }
                 }
             }
@@ -670,7 +814,40 @@ h2{
     }
 }
 #sidebar{
-    margin-top:158px;
+    margin-top:120px;
+    @media only screen and (max-width : 1100px) {
+        margin-top:0;
+    }
+    .sidebartitle{
+        font-weight: 800;
+        font-size: 18px;
+        margin-bottom: 20px;
+        @media only screen and (max-width : 1000px) {
+            text-align: center;
+        }
+    }
+    .main_nav{
+        list-style: none;
+        li{
+            display: block;
+            margin-top:10px;
+            margin-bottom: 10px;
+            a{
+                border:thin solid $dblue;
+                text-align: center;
+                display: block;
+                padding:10px;
+                background:$dblue;
+                color:$cream;
+                @include border-radius(5px);
+                &:hover{
+                    background: $cream;
+                    color:$dblue;
+
+                }
+            }
+        }
+    }
 }
 
 .accshort{
@@ -683,6 +860,8 @@ h2{
         color:$burg;
         font-size: 22px;
         font-weight: 600;
+        text-align: center;
+        width: 100%;
         i{
             font-size: 35px;
             font-weight: 800;
@@ -721,11 +900,29 @@ h2{
     }
 }
 .error{
-    margin:auto;
-    text-align:center;
-    @include border-radius(5px);
-    margin-top:50px;
     &.page_content{
+        text-align:center;
+        margin-top:50px;
+
+        margin:auto;
+        text-align:center;
+        @include border-radius(5px);
+        @media only screen and (max-width : 800px) {
+            margin-top:0px;
+        }
+   }
+    h1{
+        font-size: 130px;
+        padding-top: 100px;
+        padding-bottom: 50px;
+         text-align:center;
+         @media only screen and (max-width : 800px) {
+            font-size: 50px;
+        }
+    }
+    .lead{
+        font-size: 40px;
+        padding-bottom:20px;
          text-align:center;
     }
 }
@@ -774,6 +971,19 @@ h2{
         i{
             text-align: center;
             margin:auto !important;
+        }
+    }
+}
+.nonmobilecontent{
+    margin-left:200px;
+     @media only screen and (max-width : 1000px) {
+        margin-left:0px;
+        margin-top:89px;
+     }
+    &.nonmobile{
+        margin-left: 210px;
+        @media only screen and (max-width : 1000px) {
+            margin-left:0px;
         }
     }
 }
