--- a/assets/sass/_partials/_actionplan.scss
+++ b/assets/sass/_partials/_actionplan.scss
@@ -20,6 +20,15 @@
                     width:auto;
                 }
            }
+           .modal-body{
+                      //margin-top: 103px;
+                    //height: 450px;
+                    overflow: scroll;
+                }
+                .modal-header{
+                    //position: fixed;
+                    margin-right:1px;
+                }
            .print{
             background: none;
             border:none;
@@ -443,7 +452,9 @@
                 width:100px;
             }
 
-
+            .act, .sb-slide{
+                display: none;
+            }
             #info{
                 display:block !important;
                 position:relative;
@@ -452,9 +463,15 @@
                     width:100%;
                     height:100%;
                     margin:auto;
-                       border:none !important;
+                    border:none !important;
                        //page-break-before: always;
                 }
+                .modal-body{
+                    overflow: auto;
+                    height:auto !important;
+                     margin-top:0;
+                }
+
                 .modal-dialog{
                    .only_print{
                         display:block;
@@ -480,7 +497,7 @@
                         font-size: 14px;
                     }
                     ul{
-                        li{
+                        >li{
                             padding:0px;
                             font-size: 12px !important;
                              margin-bottom: 20px;
