--- a/assets/sass/_partials/_fbstyle.scss
+++ b/assets/sass/_partials/_fbstyle.scss
@@ -72,3 +72,40 @@
         }
     }
 }
+
+.facebooklike.mobile{
+    &.row{
+        margin-left: -55px;
+        margin-right:-30px;
+    }
+    .mobile-conta{
+        width:100%;
+        overflow: hidden;
+        height:300px;
+        img{
+            height:400px;
+            margin-top:-100px;
+            margin-left:-100px;
+        }
+    }
+    .about{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .procontent{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .fb-image-profile{
+        margin: -158px 10px 0px 25px;
+        z-index: 9;
+        width: 32%;
+    }
+    h1{
+        margin-top: -142px;
+        position: absolute;
+        color: $lblue;
+        margin-left: 200px;
+        font-size: 80px;
+    }
+}
