--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -38,42 +38,73 @@ hr{
 
 
 }
+.size-full{
+    width: 100%;
+    height:auto;
+}
 .img-cont{
     overflow: hidden;
     height:200px;
 }
 ol {
     counter-reset: counts;
-    li{
+    > li{
         margin-bottom: .5em;
         overflow: hidden; // Hide the default ol li numbers
-        margin-bottom:20px;
+        margin-bottom:0px;
         padding-left:43px;
+        line-height: normal;
+        padding-bottom: 20px;
+
+
         &:before{
             content: counter(counts);
             counter-increment: counts;
             font-size: 17px;
             font-weight: 800;
-            margin-right: .5em;
+            margin-right: 14px;
             display: inline-block;
             vertical-align: middle;
             @include border-radius(50%);
             background:$dblue;
             color:$cream;
             //padding: 12px;
-            padding-top: 4px;
-            padding-bottom: 6px;
+            padding-top: 2px;
+           // padding-bottom: 14px;
             font-family: 'Open Sans', sans-serif;
-              width: 34px;
+              width: 28px;
             text-align: center;
             margin-left: -43px;
+            height:28px
         }
+
     }
     &.less{
         li{
              margin-bottom:10px;
         }
     }
+}
+.upper{
+    line-height: 20px;
+}
+.infog{
+    a{
+        //background:$burg;
+        display: inline-block;
+        margin:8px;
+        img{
+            opacity: 0.5;
+            @media only screen and (max-width : 900px) {
+                opacity: 1.0
+            }
+            @include transition(1,1s, 0);
+            &:hover{
+                opacity:1.0;
+            }
+        }
+    }
+
 }
 
 ul{
@@ -422,6 +453,16 @@ h3{
         padding-top: 0px;
         color:$cream;
         @include border-radius(0);
+        ul{
+            margin-left: 0;
+            padding:0;
+            >li{
+                a{
+                    font-weight: 600;
+                    margin-left: -10px;
+                }
+            }
+        }
 
         footer{
              @include transition(1, 1s, 0);
@@ -614,7 +655,7 @@ h3{
             .checklist{
                 .tab-pane{
                     ul{ list-style: none;
-                        li{
+                        >li{
                             display: block;
                             padding-left: 1.2em;
                             font-weight: 600;
@@ -684,8 +725,8 @@ h3{
                         background: $cream !important;
                         border-top:none;
                         border-bottom:none;
-                       height:100%;
-                        height:126px;
+                        height:100%;
+                        height:168px;
                     }
                 }
 
@@ -722,6 +763,10 @@ h3{
         background-size: 100% auto;
         .frontpage_image{
             z-index: 1;
+              @media only screen and (max-width : 500px) {
+                margin-top: 135px;
+                margin-bottom: -89px;
+            }
             img{
                 width:100%;
             }
@@ -764,7 +809,7 @@ h3{
             padding:20px;
             background: $burg url("assets/img/burgarrow.png") no-repeat left center;
             background-size: 133px;
-            color: $dblue;
+            color: $lblue;
             font-size: 30px;
             text-align: center;
             line-height: 27px;
@@ -775,6 +820,9 @@ h3{
             }
         }
         .onhover{
+              @media only screen and (max-width : 1000px) {
+                background:#dfdccb;
+            }
             background:$cream;
             color:$dblue;
             padding:20px;
@@ -969,7 +1017,7 @@ h3{
             text-align: center;
         }
     }
-    .main_nav{
+    ul{
         list-style: none;
         li{
             display: block;
@@ -1128,7 +1176,7 @@ h3{
     margin-left:200px;
      @media only screen and (max-width : 1000px) {
         margin-left:0px;
-        margin-top:89px;
+        margin-top:87px;
      }
     &.nonmobile{
         margin-left: 210px;
