--- a/assets/sass/_partials/_fbstyle.scss
+++ b/assets/sass/_partials/_fbstyle.scss
@@ -48,6 +48,9 @@
                 position: relative;
                 top: 3px;
             }
+              @media only screen and (max-width : 500px) {
+                font-size: 17px;
+            }
         }
     }
     .procontent{
@@ -102,10 +105,11 @@
         width: 32%;
     }
     h1{
-        margin-top: -142px;
+        margin-top: -133px;
         position: absolute;
         color: $lblue;
         margin-left: 200px;
-        font-size: 80px;
+        font-size: 40px;
+        margin-left:136px;
     }
 }
