--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -96,7 +96,9 @@ ol {
         img{
             opacity: 0.5;
             @media only screen and (max-width : 900px) {
-                opacity: 1.0
+                opacity: 1.0;
+                width:100% !important;
+                width:auto;
             }
             @include transition(1,1s, 0);
             &:hover{
@@ -431,7 +433,10 @@ h3{
         margin-left: 5px;
     }
     .frontpage_image{
-        margin-left:5px;
+        margin-left:3px;
+        @media only screen and (min-width : 321px) {
+            margin-left:0;
+        }
 
     }
     &.page{
@@ -446,7 +451,7 @@ h3{
                            margin-top: 0px;
                         }
             .alert{
-        background:$orange url("assets/img/help_arrow.png") no-repeat center top;
+                background:$orange url("assets/img/help_arrow.png") no-repeat center top;
         width:100%;
 
         padding-bottom:0;
@@ -798,7 +803,8 @@ h3{
             position: relative;
              /* Smartphones (portrait) ----------- */
             @media only screen and (max-width : 680px) {
-              margin-top: 0px;
+              margin-top:-42px;
+              margin-left:8px;
             }
             @media only screen and (min-width: 321px) and (max-width : 568px) {
               //margin-top: 200px;
@@ -1019,6 +1025,9 @@ h3{
     }
     ul{
         list-style: none;
+        @media only screen and (max-width : 400px) {
+            padding-left:0;
+        }
         li{
             display: block;
             margin-top:10px;
@@ -1176,7 +1185,7 @@ h3{
     margin-left:200px;
      @media only screen and (max-width : 1000px) {
         margin-left:0px;
-        margin-top:87px;
+        margin-top:130px;
      }
     &.nonmobile{
         margin-left: 210px;
